--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ description: >-                        # used by seo meta and the atom feed
   and focuses on text presentation.
 
 # Replace with the website url, e.g. 'https://username.github.io'
-url: 'https://ajalex114.github.io/'
+url: 'https://ajalex114.github.io/devnotes'
 
 author: Alen Alex                  # change to your full name
 
@@ -188,15 +188,15 @@ exclude:
 
 sitemap_exclude:  # Sitemap will exclude the following items.
   fuzzy:
-    - /assets/
+    - /devnotes/assets/
   accurate:
-    - /norobots/
-    - /tabs/
-    - /categories/
-    - /tags/
-    - /posts/
-    - 404.html
-    - feed.xml
-    - sitemap.xml
-    - robots.txt
-    - redirects.json
+    - /devnotes/norobots/
+    - /devnotes/tabs/
+    - /devnotes/categories/
+    - /devnotes/tags/
+    - /devnotes/posts/
+    - /devnotes/404.html
+    - /devnotes/feed.xml
+    - /devnotes/sitemap.xml
+    - /devnotes/robots.txt
+    - /devnotes/redirects.json
