--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ description: >-                        # used by seo meta and the atom feed
   The content of the blog reflects my personal opinions and not that of my employer.
 
 # Replace with the website url, e.g. 'https://username.github.io'
-url: 'https://ajalex114.github.io/devnotes'
+url: 'https://ajalex114.github.io/'
 
 author: Alen Alex                  # change to your full name
 
