--- a/_data/share.yml
+++ b/_data/share.yml
@@ -23,10 +23,15 @@ platforms:
     link: "https://telegram.me/share?text=TITLE&url=URL"
 
   # Uncomment below if you need to.
-  # -
-  #   type: Linkedin
-  #   icon: "fab fa-linkedin"
-  #   link: "https://www.linkedin.com/sharing/share-offsite/?url=URL"
+  -
+    type: Linkedin
+    icon: "fab fa-linkedin"
+    link: "https://www.linkedin.com/sharing/share-offsite/?url=URL"
+
+  - 
+    type: Whatsapp
+    icon: "fab fa-whatsapp"
+    link: "https://wa.me/?text=TITLE&url=URL"
   #
   # -
   #   type: Weibo
