Updating my profile to reflect my career change to Microsoft

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ tagline: Developer notes by Alen Alex. The content of the blog reflects my perso
 # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  I'm Alen Alex. Software developer at Google.
+  I'm Alen Alex. Software developer at Microsoft.
   This is Developer Notes by Alen Alex.  
 
 # Replace with the website url, e.g. 'https://username.github.io'
